--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "MCP server for Redshift based on username and password authentica
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "aiocache>=0.12.3",
     "loguru>=0.7.3",
     "mcp[cli]>=1.12.0",
     "pandas>=2.3.1",
@@ -21,5 +22,6 @@ dependencies = [
 [dependency-groups]
 dev = [
     "bandit>=1.8.6",
+    "black>=25.1.0",
     "ipython>=9.4.0",
 ]
